@@ -1,3 +1,11 @@
+2008-04-08  Jens Granseuer  <jensgr@gmx.net>
+
+	Merged from trunk:
+	Based on a patch by: Matthias Clasen <mclasen@redhat.com>
+
+	* main.c: (create_dialog): don't show the "accessible login" button if
+	gdmsetup is not available (bug #526944)
+
 2008-02-09  Luca Ferretti  <elle.uca@libero.it>
 
 	reviewed by: Jens Granseuer
